# kvault

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/corpus/: mod.rs
src/mcp/: mod.rs
src/search/: mod.rs  ripgrep.rs  tantivy.rs
src/storage/: local.rs  mod.rs
tests/: e2e_tests.rs  integration_tests.rs
tests/e2e/: MANUAL_TESTS.md
