[package]
name = "kvault"
version = "0.1.0"
edition = "2024"
description = "Searchable knowledge corpus with BM25 ranking"
license = "MIT"
repository = "https://github.com/aaronbrooks/kvault"
keywords = ["knowledge", "search", "mcp", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
directories = "6.0.0"
rmcp = { version = "0.14.0", features = ["server"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tantivy = { version = "0.25.0", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"], optional = true }
toml = "0.9.11"

[features]
default = []
tantivy = ["dep:tantivy"]
mcp = ["dep:rmcp", "dep:tokio"]
